# omnical

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: astronomy.rs  calendar.rs  chinese.rs  date.rs  gregorian.rs  lib.rs  main.rs
tests/: verify_chinese_calendar.rs
