[package]
name = "omnical"
version = "0.10.6"
edition = "2021"
description = "Print calendars, convert dates, and more."
license = "MIT"
repository = "https://github.com/hanwentao/omnical/"
readme = "README.md"
default-run = "omnical"

[dependencies]
astro = "2.0.0"
clap = { version = "4.5.1", features = ["derive"] }
derivative = "2.2.0"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"

[dev-dependencies]
chinese-lunisolar-calendar = "0.2.0"
chrono = "0.4.34"
nongli = "0.1.1"
