[package]
name = "omnical"
version = "0.11.0"
edition = "2024"
description = "Print calendars, convert dates, and more."
license = "MIT"
repository = "https://github.com/hanwentao/omnical/"
readme = "README.md"
default-run = "omnical"

[dependencies]
astro = "2.0.0"
clap = { version = "4.5.48", features = ["derive"] }
derivative = "2.2.0"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"

[dev-dependencies]
chinese-lunisolar-calendar = "0.2.0"
chrono = "0.4.42"
nongli = "0.4.1"
